--- a/MvpModules/WanAndroid/src/main/AndroidManifest.xml
+++ b/MvpModules/WanAndroid/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".ui.activity.SearchActivity" />
         <activity android:name=".ui.activity.TreeActivity" />
         <activity android:name=".ui.activity.LoginActivity" />
+        <activity android:name=".ui.activity.CollectArticleActivity" />
     </application>
 
 </manifest>
